# slicer_ros2_test

./: CMakeLists.txt
OLDROSPointSubscriber/: CMakeLists.txt
OLDROSPointSubscriber/Logic/: vtkMRMLROS2PointStampedSubscriberNodeInternals.h
OLDROSPointSubscriber/ROSPointSubscriberExtension/: qSlicerROSPointSubscriberModule.h
PointExtension/PointSubscriberExtension/: CMakeLists.txt
PointExtension/PointSubscriberExtension/PointSubscriber/: CMakeLists.txt  qSlicerPointSubscriberModule.cxx  qSlicerPointSubscriberModule.h  qSlicerPointSubscriberModuleWidget.cxx  qSlicerPointSubscriberModuleWidget.h
PointExtension/PointSubscriberExtension/PointSubscriber/Logic/: CMakeLists.txt  vtkSlicerPointSubscriberLogic.cxx  vtkSlicerPointSubscriberLogic.h
PointExtension/PointSubscriberExtension/PointSubscriber/Resources/: qSlicerPointSubscriberModule.qrc
PointExtension/PointSubscriberExtension/PointSubscriber/Resources/UI/: qSlicerPointSubscriberFooBarWidget.ui  qSlicerPointSubscriberModuleWidget.ui
PointExtension/PointSubscriberExtension/PointSubscriber/Widgets/: qSlicerPointSubscriberFooBarWidget.cxx  qSlicerPointSubscriberFooBarWidget.h
ROSPointSubscriberExtension/: CMakeLists.txt  qSlicerROSPointSubscriberModule.cxx
ROSPointSubscriberExtension/Logic/: CMakeLists.txt  vtkMRMLROS2PointStampedSubscriberNode.cxx  vtkMRMLROS2PointStampedSubscriberNode.h  vtkMRMLROS2PointStampedSubscriberNodeInternals.cxx
ROSPointSubscriberExtension/ROSPointSubscriberExtension/: CMakeLists.txt
ROSPointSubscriberModule/: CMakeLists.txt  qSlicerROSPointSubscriberModuleModule.cxx  qSlicerROSPointSubscriberModuleModule.h  qSlicerROSPointSubscriberModuleModuleWidget.cxx  qSlicerROSPointSubscriberModuleModuleWidget.h
ROSPointSubscriberModule/Logic/: vtkSlicerROSPointSubscriberModuleLogic.cxx  vtkSlicerROSPointSubscriberModuleLogic.h
ROSPointSubscriberModule/Resources/: qSlicerROSPointSubscriberModuleModule.qrc
ROSPointSubscriberModule/Resources/UI/: qSlicerROSPointSubscriberModuleFooBarWidget.ui  qSlicerROSPointSubscriberModuleModuleWidget.ui
ROSPointSubscriberModule/Widgets/: qSlicerROSPointSubscriberModuleFooBarWidget.cxx  qSlicerROSPointSubscriberModuleFooBarWidget.h
Ros2SlicerDev/SlicerScripts/: head_pipeline.py  point_and_center.py  point_and_center_fixed.py
cpp_pub/: CMakeLists.txt  package.xml
